--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -20,14 +20,14 @@
     </div>
     <div class="nav-profile">
       <div class="nav-hover">
-        <span class="nav-icon"><img src="/assets/chatboxes.png" alt="Chat"></span>
-        <span class="nav-label">Chat</span>
+        <span class="nav-icon"><img src="/assets/skills.png" alt="Chat"></span>
+        <span class="nav-label">Skills</span>
       </div>
     </div>
     <div class="nav-profile">
       <a href="http://localhost:4200/about" class="nav-hover no-underline">
         <span class="nav-icon"><img src="/assets/copy.png" alt="Copy"></span>
-        <span class="nav-label">Portfolio</span>
+        <span class="nav-label">About</span>
       </a>
     </div>
     <div class="nav-profile">
