Add Portfolio Component and Update Styles
- Introduced a new Portfolio component with a detailed project showcase, including modals for project overviews.
- Updated side navigation to include links to the new Portfolio and Skills sections.
- Enhanced global styles with a new background color and font integration.
- Adjusted padding and layout in the About and Home components for better responsiveness.
- Removed the outdated portfolio component test file.

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,15 +1,18 @@
 .about-section {
-  padding: 4rem 2rem;
+  padding:2rem;
+  padding-top: 1rem;
+  padding-left: 10rem;
 }
 
 .about-container {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 1350px;
+  margin: auto;
   background: rgba(255, 255, 255, 0.05);
   border-radius: 30px;
   backdrop-filter: blur(10px);
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
   padding: 0rem 2rem;
+  padding-top: 0.5rem;
   position: relative;
   z-index: 1;
 }
@@ -48,7 +51,8 @@ font-family: 'Montserrat';
   text-align: center;
   font-weight: 600;
   color: #ffffff;
-  margin-bottom: 1.5rem;
+  margin-bottom: .5rem;
+  margin-top: .5rem;
 }
 
 .divider {
