--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -13,16 +13,20 @@
       <!-- </div> -->
     </div>
     <div class="nav-profile">
-      <div class="nav-hover">
+      <!-- <div class="nav-hover"> -->
+        <a href="http://localhost:4200/portfolio" class="nav-hover no-underline">
         <span class="nav-icon"><img src="/assets/keypad.png" alt="Keypad"></span>
         <span class="nav-label">Projects</span>
+      </a>
       </div>
-    </div>
+    <!-- </div> -->
     <div class="nav-profile">
-      <div class="nav-hover">
+      <!-- <div class="nav-hover"> -->
+        <a href="http://localhost:4200/skills" class="nav-hover no-underline">
         <span class="nav-icon"><img src="/assets/skills.png" alt="Chat"></span>
         <span class="nav-label">Skills</span>
-      </div>
+      </a>
+      <!-- </div> -->
     </div>
     <div class="nav-profile">
       <a href="http://localhost:4200/about" class="nav-hover no-underline">
