--- a/src/app/components/side-nav/side-nav.component.scss
+++ b/src/app/components/side-nav/side-nav.component.scss
@@ -67,7 +67,7 @@
   }
   
   .nav-profile:hover .nav-hover {
-    background: linear-gradient(135deg, #c2f0f7, #e2d1f9);
+    background: linear-gradient(135deg, #53e1f7, #ad73fa);
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     padding: 10px 20px;
   }
@@ -91,7 +91,7 @@
 }
 
 .nav-logo {
-  margin-bottom: 45rem;
+  margin-bottom: 49rem;
   margin-left: 2rem;
 }
 
