--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    height: 100%;
+    background-color: #000; /* or whatever your desired background is */
+    margin: 0;
+    // padding: 0;
+    // box-sizing: border-box;
+  }
